Hero subtitle and About Me

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     <nav id="navbar">
         <div class="container">
             <div class="nav-container">
-                <a href="#" class="logo">Portfolio</a>
+                <a href="#" class="logo">Paul Quinzi</a>
                 <ul class="nav-menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -556,7 +556,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Welcome to My Portfolio</h1>
-                <p class="hero-subtitle">I'm a passionate developer creating amazing digital experiences</p>
+                <p class="hero-subtitle">Computer Science & Modeling Engineer | From code to strategy, leading teams and connecting domains</p>
                 <a href="#about" class="cta-button">Learn More About Me</a>
             </div>
         </div>
@@ -573,10 +573,10 @@
                     </div>
                 </div>
                 <div class="about-text">
-                    <h3>Hello! I'm a Creative Developer</h3>
-                    <p>I'm a passionate full-stack developer with expertise in creating modern, responsive web applications. With a strong foundation in both front-end and back-end technologies, I love bringing ideas to life through clean, efficient code.</p>
-                    <p>My journey in software development has been driven by curiosity and a desire to solve complex problems. I enjoy working with cutting-edge technologies and am always eager to learn new skills and take on challenging projects.</p>
-                    <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source projects, or sharing knowledge with the developer community.</p>
+                    <h3>Hello! I’m a Computer Science and Modeling Engineer</h3>
+                    <p>I’m passionate about software development, algorithms, and problem-solving. With experience ranging from video game design to embedded systems, I enjoy transforming complex ideas into reliable, efficient, and creative solutions.</p>
+                    <p>My journey has taken me through a variety of projects: developing an official Tetris game, creating a Minecraft port on Wii under strict constraints, and building a sports database web application during an international internship at Trinity College Dublin. Currently, I’m applying my skills at Michelin, where I work on predictive maintenance algorithms in embedded systems.</p>
+                    <p>Beyond coding, I enjoy exploring fields like machine learning, optimization, and 3D modeling. I also cultivate personal passions in music, athletics, and geography, which keep me curious, disciplined, and creative in both work and life.</p>
                 </div>
             </div>
         </div>
