--- a/index.html
+++ b/index.html
@@ -712,15 +712,15 @@
                     <p>I'm always interested in hearing about new opportunities and exciting projects. Feel free to reach out!</p>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <span>your.email@example.com</span>
+                        <span>quinzipaul@gmail.com</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>+1 (555) 123-4567</span>
+                        <span>(+33) 6 41 96 25 97</span>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <span>Your City, Your Country</span>
+                        <span>Cournon d'Auvergne, France</span>
                     </div>
                 </div>
                 <form class="contact-form">
@@ -748,8 +748,6 @@
             <div class="social-links">
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
             <p>&copy; 2024 Your Portfolio. All rights reserved.</p>
         </div>
