--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                         <span>Cournon d'Auvergne, France</span>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" action="mailto:quinzipaul@gmail.com" method="post" enctype="text/plain">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
@@ -738,6 +738,7 @@
                     </div>
                     <button type="submit" class="submit-btn">Send Message</button>
                 </form>
+
             </div>
         </div>
     </section>
