Fix linkedin link

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
         <div class="container">
             <div class="social-links">
                 <a href="https://github.com/JeNeVoulaisPas"><i class="fab fa-github"></i></a>
-                <a href="www.linkedin.com/in/paul-quinzi-63pr"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/paul-quinzi-63pr"><i class="fab fa-linkedin"></i></a>
             </div>
             <p>&copy; 2024 Your Portfolio. All rights reserved.</p>
         </div>
