--- a/index.html
+++ b/index.html
@@ -385,17 +385,6 @@
             width: 20px;
         }
 
-        .contact-form {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 2rem;
-            border-radius: 10px;
-            backdrop-filter: blur(10px);
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
         .form-group label {
             display: block;
             margin-bottom: 0.5rem;
@@ -416,23 +405,6 @@
         .form-group textarea {
             height: 120px;
             resize: vertical;
-        }
-
-        .submit-btn {
-            background: var(--card-background);
-            color: var(--primary-green);
-            padding: 12px 30px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .submit-btn:hover {
-            background: var(--light-green);
-            color: var(--text-light);
         }
 
         /* Footer */
@@ -710,38 +682,26 @@
                 <div class="contact-info">
                     <h3>Let's Connect</h3>
                     <p>I'm always interested in hearing about new opportunities and exciting projects. Feel free to reach out!</p>
+
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <span>quinzipaul@gmail.com</span>
+                        <a href="mailto:quinzipaul@gmail.com">quinzipaul@gmail.com</a>
                     </div>
+
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
-                        <span>(+33) 6 41 96 25 97</span>
+                        <a href="tel:+33641962597">(+33) 6 41 96 25 97</a>
                     </div>
+
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Cournon d'Auvergne, France</span>
                     </div>
                 </div>
-                <form class="contact-form" action="mailto:quinzipaul@gmail.com" method="post" enctype="text/plain">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" required></textarea>
-                    </div>
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-
             </div>
         </div>
     </section>
+
 
     <!-- Footer -->
     <footer>
