--- a/index.html
+++ b/index.html
@@ -723,14 +723,14 @@
                         <span>Cournon d'Auvergne, France</span>
                     </div>
                 </div>
-                <form class="contact-form" action="mailto:quinzipaul@gmail.com" method="post" enctype="text/plain">
+                <form class="contact-form" id="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required>
+                        <input type="text" id="name" name="from_name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
+                        <input type="email" id="email" name="reply_to" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
@@ -738,6 +738,26 @@
                     </div>
                     <button type="submit" class="submit-btn">Send Message</button>
                 </form>
+
+                <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+                <script>
+                    (function() {
+                        emailjs.init("6ZQgQEWG5Bni5KHHZ"); // replace with your EmailJS public key
+                    })();
+
+                    document.getElementById('contact-form').addEventListener('submit', function(e) {
+                        e.preventDefault();
+
+                        emailjs.sendForm('service_or2o21d', 'template_jpd1uew', this)
+                            .then(() => {
+                                alert('✅ Thank you for your message! I will get back to you soon.');
+                                this.reset();
+                            }, (error) => {
+                                alert('❌ Oops! Something went wrong...\n' + JSON.stringify(error));
+                            });
+                    });
+                </script>
+
 
             </div>
         </div>
