--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                 <a href="https://github.com/JeNeVoulaisPas"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/paul-quinzi-63pr"><i class="fab fa-linkedin"></i></a>
             </div>
-            <p>&copy; 2024 Your Portfolio. All rights reserved.</p>
+            <p>&copy; 2025 Paul Quinzi Portfolio. All rights reserved.</p>
         </div>
     </footer>
 
