Add profile pic

--- a/index.html
+++ b/index.html
@@ -418,6 +418,15 @@
             resize: vertical;
         }
 
+        .profile-pic img {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            display: block;
+        }
+
+
         .submit-btn {
             background: var(--card-background);
             color: var(--primary-green);
@@ -569,7 +578,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="profile-pic">
-                        <i class="fas fa-user"></i>
+                        <img src="profile.png" alt="Profile Picture">
                     </div>
                 </div>
                 <div class="about-text">
