Add profile pic

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="profile-pic">
-                        <img src="profile.png" alt="Profile Picture">
+                        <img src="profile.jpg" alt="Profile Picture">
                     </div>
                 </div>
                 <div class="about-text">
