--- a/index.html
+++ b/index.html
@@ -418,13 +418,24 @@
             resize: vertical;
         }
 
+        .profile-pic {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: var(--gradient);
+        }
+
         .profile-pic img {
             width: 100%;
             height: 100%;
-            border-radius: 50%;
             object-fit: cover;
             display: block;
         }
+
 
 
         .submit-btn {
