--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
             <div class="about-content">
                 <div class="about-image">
                     <div class="profile-pic">
-                        <img src="https://via.placeholder.com/250" alt="Profile Picture">
+                        <img src="profile.jpg" alt="Profile Picture">
                     </div>
                 </div>
                 <div class="about-text">
