--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
                 <script>
                     (function() {
-                        emailjs.init("6ZQgQEWG5Bni5KHHZ"); // Ton EmailJS public key
+                        emailjs.init("6ZQgQEWG5Bni5KHHZ");
                     })();
 
                     document.getElementById('contact-form').addEventListener('submit', function(e) {
@@ -772,7 +772,7 @@
 
                         btn.textContent = 'Sending...';
 
-                        // Remplace par ton service ID et template ID EmailJS
+
                         const serviceID = 'service_or2o21d';
                         const templateID = 'template_jpd1uew';
 
