--- a/index.html
+++ b/index.html
@@ -605,74 +605,88 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <h2 class="section-title">My Skills</h2>
+            <h2 class="section-title">Skills</h2>
             <div class="skills-grid">
+
+                <!-- Soft Skills -->
                 <div class="skill-category">
-                    <h3><i class="fas fa-code"></i> Frontend Development</h3>
+                    <h3><i class="fas fa-users"></i> Soft Skills</h3>
+                    <ul>
+                        <li>Teamwork</li>
+                        <li>Leadership</li>
+                        <li>Adaptability</li>
+                        <li>General Knowledge</li>
+                        <li>Sociability</li>
+                        <li>Ability to Learn</li>
+                    </ul>
+                    <p><i class="fas fa-car"></i> Holder of a driving license (B)</p>
+                </div>
+
+                <!-- Programming Languages -->
+                <div class="skill-category">
+                    <h3><i class="fas fa-code"></i> Programming Languages</h3>
                     <div class="skill-item">
-                        <span>HTML/CSS</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 90%"></div>
-                        </div>
+                        <span>C / C++ / Python (Expert)</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>JavaScript</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 85%"></div>
-                        </div>
+                        <span>Java / HTML / CSS (Intermediate)</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>React</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 80%"></div>
-                        </div>
+                        <span>JS / C# / .NET / Kotlin (Beginner)</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
                     </div>
                 </div>
+
+                <!-- Web Development -->
                 <div class="skill-category">
-                    <h3><i class="fas fa-server"></i> Backend Development</h3>
+                    <h3><i class="fas fa-globe"></i> Web Development</h3>
                     <div class="skill-item">
-                        <span>Node.js</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 85%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Python</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 80%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Database</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 75%"></div>
-                        </div>
+                        <span>Angular / Blazor / ReactJS</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
                     </div>
                 </div>
+
+                <!-- Databases -->
                 <div class="skill-category">
-                    <h3><i class="fas fa-tools"></i> Tools & Technologies</h3>
+                    <h3><i class="fas fa-database"></i> Databases</h3>
                     <div class="skill-item">
-                        <span>Git/GitHub</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 90%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Docker</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 70%"></div>
-                        </div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Cloud Services</span>
-                        <div class="skill-bar">
-                            <div class="skill-progress" style="width: 75%"></div>
-                        </div>
+                        <span>SQLite / SQLServer / Oracle</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
                     </div>
                 </div>
+
+                <!-- Graphics -->
+                <div class="skill-category">
+                    <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
+                    <div class="skill-item">
+                        <span>SDL2 / Kivy / Revolution GX</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                    </div>
+                </div>
+
+                <!-- Environments & Tools -->
+                <div class="skill-category">
+                    <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
+                    <div class="skill-item">
+                        <span>Windows / Linux / WSL</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Visual Studio / JetBrains IDE</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Git / GitHub / GitLab</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
+
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
