--- a/index.html
+++ b/index.html
@@ -625,16 +625,50 @@
                 <!-- Programming Languages -->
                 <div class="skill-category">
                     <h3><i class="fas fa-code"></i> Programming Languages</h3>
+
+                    <!-- Expert -->
                     <div class="skill-item">
-                        <span>C / C++ / Python (Expert)</span>
+                        <span>C</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>Java / HTML / CSS (Intermediate)</span>
+                        <span>C++</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Python</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                    </div>
+
+                    <!-- Intermediate -->
+                    <div class="skill-item">
+                        <span>Java</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>JS / C# / .NET / Kotlin (Beginner)</span>
+                        <span>HTML</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>CSS</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                    </div>
+
+                    <!-- Beginner -->
+                    <div class="skill-item">
+                        <span>JavaScript</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>C#</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>.NET</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Kotlin</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
                     </div>
                 </div>
@@ -643,7 +677,15 @@
                 <div class="skill-category">
                     <h3><i class="fas fa-globe"></i> Web Development</h3>
                     <div class="skill-item">
-                        <span>Angular / Blazor / ReactJS</span>
+                        <span>Angular</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Blazor</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>ReactJS</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
                     </div>
                 </div>
@@ -652,7 +694,15 @@
                 <div class="skill-category">
                     <h3><i class="fas fa-database"></i> Databases</h3>
                     <div class="skill-item">
-                        <span>SQLite / SQLServer / Oracle</span>
+                        <span>SQLite</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>SQL Server</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Oracle</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
                     </div>
                 </div>
@@ -661,8 +711,16 @@
                 <div class="skill-category">
                     <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
                     <div class="skill-item">
-                        <span>SDL2 / Kivy / Revolution GX</span>
+                        <span>SDL2</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Kivy</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Revolution GX</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 55%"></div></div>
                     </div>
                 </div>
 
@@ -670,22 +728,43 @@
                 <div class="skill-category">
                     <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
                     <div class="skill-item">
-                        <span>Windows / Linux / WSL</span>
+                        <span>Windows</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>Visual Studio / JetBrains IDE</span>
+                        <span>Linux</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
                     </div>
                     <div class="skill-item">
-                        <span>Git / GitHub / GitLab</span>
+                        <span>WSL</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Visual Studio</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>JetBrains IDE</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Git</span>
                         <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>GitHub</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>GitLab</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
                     </div>
                 </div>
 
             </div>
         </div>
     </section>
+
 
 
     <!-- Projects Section -->
