--- a/index.html
+++ b/index.html
@@ -606,9 +606,9 @@
     <section id="skills" class="skills">
         <div class="container">
             <h2 class="section-title">Skills</h2>
-            <div class="skills-grid">
 
-                <!-- Soft Skills -->
+            <!-- Soft Skills -->
+            <div class="skills-grid">
                 <div class="skill-category">
                     <h3><i class="fas fa-users"></i> Soft Skills</h3>
                     <ul>
@@ -621,149 +621,175 @@
                     </ul>
                     <p><i class="fas fa-car"></i> Holder of a driving license (B)</p>
                 </div>
+            </div>
 
-                <!-- Programming Languages -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-code"></i> Programming Languages</h3>
+            <!-- Programming Languages in 3 Columns -->
+            <div class="skill-category full-width">
+                <h3><i class="fas fa-code"></i> Programming Languages</h3>
+                <div class="skills-columns">
 
                     <!-- Expert -->
-                    <div class="skill-item">
-                        <span>C</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>C++</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Python</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                    <div class="skill-column">
+                        <h4>Expert</h4>
+                        <div class="skill-item">
+                            <span>C</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>C++</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>Python</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
+                        </div>
                     </div>
 
                     <!-- Intermediate -->
-                    <div class="skill-item">
-                        <span>Java</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>HTML</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>CSS</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                    <div class="skill-column">
+                        <h4>Intermediate</h4>
+                        <div class="skill-item">
+                            <span>Java</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>HTML</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>CSS</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                        </div>
                     </div>
 
                     <!-- Beginner -->
-                    <div class="skill-item">
-                        <span>JavaScript</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                    <div class="skill-column">
+                        <h4>Beginner</h4>
+                        <div class="skill-item">
+                            <span>JavaScript</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>C#</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>.NET</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                        </div>
+                        <div class="skill-item">
+                            <span>Kotlin</span>
+                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
+                        </div>
                     </div>
-                    <div class="skill-item">
-                        <span>C#</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>.NET</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Kotlin</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                    </div>
-                </div>
 
-                <!-- Web Development -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-globe"></i> Web Development</h3>
-                    <div class="skill-item">
-                        <span>Angular</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Blazor</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>ReactJS</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
-                    </div>
                 </div>
-
-                <!-- Databases -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-database"></i> Databases</h3>
-                    <div class="skill-item">
-                        <span>SQLite</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>SQL Server</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Oracle</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                    </div>
-                </div>
-
-                <!-- Graphics -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
-                    <div class="skill-item">
-                        <span>SDL2</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Kivy</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Revolution GX</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 55%"></div></div>
-                    </div>
-                </div>
-
-                <!-- Environments & Tools -->
-                <div class="skill-category">
-                    <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
-                    <div class="skill-item">
-                        <span>Windows</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Linux</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>WSL</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Visual Studio</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>JetBrains IDE</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>Git</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>GitHub</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
-                    </div>
-                    <div class="skill-item">
-                        <span>GitLab</span>
-                        <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
-                    </div>
-                </div>
-
             </div>
+
+            <!-- Web Development -->
+            <div class="skill-category">
+                <h3><i class="fas fa-globe"></i> Web Development</h3>
+                <div class="skill-item">
+                    <span>Angular</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Blazor</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>ReactJS</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+                </div>
+            </div>
+
+            <!-- Databases -->
+            <div class="skill-category">
+                <h3><i class="fas fa-database"></i> Databases</h3>
+                <div class="skill-item">
+                    <span>SQLite</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>SQL Server</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Oracle</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                </div>
+            </div>
+
+            <!-- Graphics -->
+            <div class="skill-category">
+                <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
+                <div class="skill-item">
+                    <span>SDL2</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Kivy</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Revolution GX</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 55%"></div></div>
+                </div>
+            </div>
+
+            <!-- Environments & Tools -->
+            <div class="skill-category">
+                <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
+                <div class="skill-item">
+                    <span>Windows</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Linux</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>WSL</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Visual Studio</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>JetBrains IDE</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>Git</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>GitHub</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
+                </div>
+                <div class="skill-item">
+                    <span>GitLab</span>
+                    <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
+                </div>
+            </div>
+
         </div>
     </section>
+
+    <style>
+        /* Extra styling for 3-column layout */
+        .skills-columns {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+        }
+        .skill-column h4 {
+            margin-bottom: 0.5rem;
+            color: #4CAF50;
+            font-weight: bold;
+        }
+    </style>
 
 
 
