Change skills display

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             <div class="skills-grid">
                 <div class="skill-category">
                     <h3><i class="fas fa-users"></i> Soft Skills</h3>
-                    <ul>
+                    <ul class="env-list">
                         <li>Teamwork</li>
                         <li>Leadership</li>
                         <li>Adaptability</li>
@@ -631,147 +631,106 @@
                     <!-- Expert -->
                     <div class="skill-column">
                         <h4>Expert</h4>
-                        <div class="skill-item">
-                            <span>C</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>C++</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>Python</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 95%"></div></div>
-                        </div>
+                        <ul class="skill-list">
+                            <li>C</li>
+                            <li>C++</li>
+                            <li>Python</li>
+                        </ul>
                     </div>
 
                     <!-- Intermediate -->
                     <div class="skill-column">
                         <h4>Intermediate</h4>
-                        <div class="skill-item">
-                            <span>Java</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>HTML</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>CSS</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                        </div>
+                        <ul class="skill-list">
+                            <li>Java</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
                     </div>
 
                     <!-- Beginner -->
                     <div class="skill-column">
                         <h4>Beginner</h4>
-                        <div class="skill-item">
-                            <span>JavaScript</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>C#</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>.NET</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                        </div>
-                        <div class="skill-item">
-                            <span>Kotlin</span>
-                            <div class="skill-bar"><div class="skill-progress" style="width: 50%"></div></div>
-                        </div>
+                        <ul class="skill-list">
+                            <li>JavaScript</li>
+                            <li>C#</li>
+                            <li>.NET</li>
+                            <li>Kotlin</li>
+                        </ul>
                     </div>
 
                 </div>
             </div>
 
-            <!-- Web Development -->
-            <div class="skill-category">
-                <h3><i class="fas fa-globe"></i> Web Development</h3>
-                <div class="skill-item">
-                    <span>Angular</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+            <!-- 3 Columns aligned with Languages -->
+            <div class="skills-columns">
+
+                <!-- Web Development -->
+                <div class="skill-column">
+                    <h3><i class="fas fa-globe"></i> Web Development</h3>
+                    <div class="skill-item">
+                        <span>Angular</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Blazor</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>ReactJS</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+                    </div>
                 </div>
-                <div class="skill-item">
-                    <span>Blazor</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+
+                <!-- Databases -->
+                <div class="skill-column">
+                    <h3><i class="fas fa-database"></i> Databases</h3>
+                    <div class="skill-item">
+                        <span>SQLite</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>SQL Server</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Oracle</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
+                    </div>
                 </div>
-                <div class="skill-item">
-                    <span>ReactJS</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 70%"></div></div>
+
+                <!-- Graphics -->
+                <div class="skill-column">
+                    <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
+                    <div class="skill-item">
+                        <span>SDL2</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Kivy</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
+                    </div>
+                    <div class="skill-item">
+                        <span>Revolution GX</span>
+                        <div class="skill-bar"><div class="skill-progress" style="width: 55%"></div></div>
+                    </div>
                 </div>
+
             </div>
 
-            <!-- Databases -->
-            <div class="skill-category">
-                <h3><i class="fas fa-database"></i> Databases</h3>
-                <div class="skill-item">
-                    <span>SQLite</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>SQL Server</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Oracle</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 65%"></div></div>
-                </div>
-            </div>
-
-            <!-- Graphics -->
-            <div class="skill-category">
-                <h3><i class="fas fa-paint-brush"></i> Graphics</h3>
-                <div class="skill-item">
-                    <span>SDL2</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Kivy</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 60%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Revolution GX</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 55%"></div></div>
-                </div>
-            </div>
-
-            <!-- Environments & Tools -->
+            <!-- Environments & Tools as a styled list -->
             <div class="skill-category">
                 <h3><i class="fas fa-tools"></i> Environments & Tools</h3>
-                <div class="skill-item">
-                    <span>Windows</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Linux</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>WSL</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 75%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Visual Studio</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>JetBrains IDE</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 80%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>Git</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>GitHub</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 90%"></div></div>
-                </div>
-                <div class="skill-item">
-                    <span>GitLab</span>
-                    <div class="skill-bar"><div class="skill-progress" style="width: 85%"></div></div>
-                </div>
+                <ul class="env-list">
+                    <li><i class="fab fa-windows"></i> Windows</li>
+                    <li><i class="fab fa-linux"></i> Linux</li>
+                    <li><i class="fas fa-terminal"></i> WSL</li>
+                    <li><i class="fas fa-code"></i> Visual Studio</li>
+                    <li><i class="fas fa-laptop-code"></i> JetBrains IDE</li>
+                    <li><i class="fab fa-git-alt"></i> Git</li>
+                    <li><i class="fab fa-github"></i> GitHub</li>
+                    <li><i class="fab fa-gitlab"></i> GitLab</li>
+                </ul>
             </div>
 
         </div>
@@ -789,7 +748,38 @@
             color: #4CAF50;
             font-weight: bold;
         }
+        .skill-list {
+            list-style: none;
+            padding: 0;
+        }
+        .skill-list li::before {
+            content: "✔ ";
+            color: #4CAF50;
+        }
+
+        /* Styled environment list */
+        .env-list {
+            list-style: none;
+            padding: 0;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 0.5rem 1rem;
+        }
+        .env-list li {
+            background: #f5f5f5;
+            padding: 8px 12px;
+            border-radius: 6px;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            transition: background 0.3s;
+        }
+        .env-list li:hover {
+            background: #e0e0e0;
+        }
     </style>
+
 
 
 
