--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             padding: 0;
         }
         .skill-list li::before {
-            content: "✔ ";
+            content: "➤  ";
             color: #4CAF50;
         }
 
@@ -744,7 +744,6 @@
             box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         }
         .skill-card:hover {
-            background: #e0e0e0;
             transform: translateY(-4px);
         }
         .skill-card h3 {
