--- a/index.html
+++ b/index.html
@@ -255,10 +255,12 @@
             border-radius: 10px;
             box-shadow: var(--shadow);
             transition: transform 0.3s ease;
+            box-shadow: 0 10px 30px rgba(45, 138, 87, 0.2);
         }
 
         .skill-category:hover {
             transform: translateY(-5px);
+            box-shadow: 0 15px 40px rgba(45, 138, 87, 0.25); /* Hover plus prononcé */
         }
 
         .skill-category h3 {
