Add high jump video

--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#interests">Interests</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="mobile-menu">
@@ -607,7 +608,7 @@
     <!-- Skills Section -->
     <section id="skills" class="skills">
         <div class="container">
-            <h2 class="section-title">Skills</h2>
+            <h2 class="section-title">My Skills</h2>
 
             <!-- Soft Skills -->
             <div class="skills-grid">
@@ -860,8 +861,8 @@
                 <!-- Athlétisme -->
                 <div class="interest-card">
                     <div class="interest-front">
-                        <h3><i class="fas fa-running"></i> Athlétisme</h3>
-                        <p>Passionné par la course et la discipline sportive.</p>
+                        <h3><i class="fas fa-running"></i> Track and Field</h3>
+                        <p>Rise the bar and go beyond your limits</p>
                     </div>
                     <div class="interest-back">
                         <video src="athletisme.mp4" autoplay muted loop></video>
@@ -871,8 +872,8 @@
                 <!-- Géographie -->
                 <div class="interest-card">
                     <div class="interest-front">
-                        <h3><i class="fas fa-globe-europe"></i> Géographie</h3>
-                        <p>Exploration et découverte du monde à travers les cartes.</p>
+                        <h3><i class="fas fa-globe-europe"></i> Geography & Vexillology</h3>
+                        <p>Explore the world and its wonders</p>
                     </div>
                     <div class="interest-back">
                         <video src="geographie.mp4" autoplay muted loop></video>
