--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                 <div class="interest-card">
                     <div class="interest-front">
                         <h3><i class="fas fa-running"></i> Track and Field</h3>
-                        <p>Rise the bar and go beyond your limits</p>
+                        <p>Raise the bar and go beyond your limits</p>
                     </div>
                     <div class="interest-back">
                         <video src="athletisme.mp4" autoplay muted loop></video>
