--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                         <p>Explore the world and its wonders</p>
                     </div>
                     <div class="interest-back">
-                        <video src="geographie.mp4" autoplay muted loop></video>
+                        <img src="geographie.jpg" alt="Geography">
                     </div>
                 </div>
             </div>
