Add catch phrase for contact

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
 <section id="contact" class="contact">
     <div class="container">
         <h2 class="section-title contact-title">Get In Touch</h2>
+        <p> Please don’t hesitate to reach out via the following form !</p>
             <form class="contact-form" id="contact-form">
                 <div class="form-group">
                     <label for="name">Name</label>
