--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p>Explore the world and its wonders</p>
                 </div>
                 <div class="interest-back">
-                    <img src="geographie.jpg" alt="Geography">
+                    <video src="geographie.mp4" autoplay muted loop></video>
                 </div>
             </div>
         </div>
